--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 :root {
+  /* Colores a usar*/
   --color-primary: #0C4891;
   --color-primary-hover: #2A7DE1;
   --color-secondary: #6D91BD;
@@ -9,6 +10,7 @@
   --color-black: #000000;
   --color-gray: #8C8C8C;
   
+  /* Tamaños establecidos en figma, para la responsividad de modifican */
   --header-height: 154px;
   --menu-height: 60px;
   --footer-height: 50px;
@@ -18,6 +20,7 @@
   --card-border-radius: 20px;
 }
 
+/* Estilos necesarios para mejor visualización de componentes*/
 * {
   margin: 0;
   padding: 0;
